--- a/dashboard-back/composer.json
+++ b/dashboard-back/composer.json
@@ -6,9 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.2",
         "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.9",
-        "laravel/sanctum": "^4.0",
+        "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.9",
         "mailgun/mailgun-php": "^4.3",
         "mailjet/mailjet-apiv3-php": "^1.6",
