--- a/dashboard-front/package.json
+++ b/dashboard-front/package.json
@@ -10,16 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "@ant-design/icons": "^6.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@types/leaflet": "^1.9.4",
+    "antd": "^5.25.2",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.10.4",
+    "i18next": "^25.1.2",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.508.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-router-dom": "^6.28.0"
+    "react-i18next": "^15.5.1",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.28.0",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.28.1",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@faker-js/faker": "^9.7.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
